      acquiring an IPTables::Parse object. These keys allow a temporary
      directory to be specified for iptables stdout/stderr, and the default
      paths are '/some/tmp/dir/iptout.XXXXXX' and '/some/tmp/dir/ipterr.XXXXXX'
      respectively. The 'iptout_pat' and 'ipterr_pat' keys allow the file paths
      to be changed.

1.6 Sat Nov 07 08:45:15 2015
    - (Miloslav Trmač) Fixed a vulnerability to not use predictable names for
      temporary files. This vulnerability would allow an attacker on a multi-
      user system to set up symlinks to overwrite any file the current user has
      write access to. If a user manually overrides the temporary file
      locations with the 'iptout' and 'ipterr' hash keys, it is recommended to
      not use predictable names either.
    - Updated to use the '-w' argument on the iptables command line (a test is
      performed to see if it is supported). This acquires an exclusive lock on
      iptables command execution. This can be disable by the user if necessary
      by setting the new lockless_ipt_exec hash key.

1.5 Mon Sep 07 20:18:16 2015
    - Bug fix to support additional characters in iptables chain names such as
      dashes and special characters. Stuart Schneider reported this bug and
      submitted a patch. Closes github issue #1.
    - Added 'rule_num' hash key to chain_rules() results (suggested by Stuart
      Schneider).
    - Updated _iptout and _ipterr tmp file paths to use the current PID as an
      extension by default if these files are not set when instantiating an
      IPTables::Parse object.  Also added a DESTROY block to clean these tmp
      files up. Patch submitted by Stuart Schneider.

1.4 Sun Mar 01 15:30:29 2015
    - Bump version to 1.4 so that CPAN recognizes it as a new version.

1.3.1 Sat Feb 28 07:15:55 2015
    - Fix version number in META.json and META.yml files.

1.3 Thu Feb 19 20:09:55 2015
    - Added support for systems with 'firewalld' via the 'firewall-cmd'