@@ -7,6 +7,10 @@ Revision history for Perl extension IPTables::Parse.
       paths are '/some/tmp/dir/iptout.XXXXXX' and '/some/tmp/dir/ipterr.XXXXXX'
       respectively. The 'iptout_pat' and 'ipterr_pat' keys allow the file paths
       to be changed.
+    - If the path to firewall-cmd/iptables/ip6tables was not specified when
+      acquiring an IPTables::Parse object, then an attempt will be made to find
+      the appropriate path in the filesystem. The directories '/sbin',
+      '/usr/sbin', '/bin', and '/usr/bin' are searched in that order.
 
 1.6 Sat Nov 07 08:45:15 2015
     - (Miloslav Trmač) Fixed a vulnerability to not use predictable names for
